--- a/src/style.css
+++ b/src/style.css
@@ -18,3 +18,24 @@
   padding: 5%;
   text-align: center;
 }
+#table {
+  width: 50%;
+  margin: 8% auto;
+  text-align: center;
+}
+#form {
+  width: 40%;
+  margin: 40px auto;
+}
+#form input {
+  width: 46%;
+  margin: 2%;
+  padding: 1%;
+  border-radius: 5px;
+  border-color: 1px solid black;
+  text-align: center;
+}
+#form button {
+  display: block;
+  margin: 2% auto 0 auto;
+}
