--- a/src/style.css
+++ b/src/style.css
@@ -48,3 +48,21 @@
   width: 100%;
   height: 180px;
 }
+.loader {
+  border: 14px solid #f3f3f3; /* Light grey */
+  border-top: 14px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 2s linear infinite;
+  margin: 50px auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
